--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "abstract"
   ],
   "author": "Mostafa Samir <mostafa.3210@gmail.com>",
-  "license": "MIT",
+  "license": { 
+    "type" : "MIT",
+    "url" : "https://github.com/Mostafa-Samir/Classing-js/blob/master/LICENSE"
+    },
   "bugs": {
     "url": "https://github.com/Mostafa-Samir/Classing-js/issues"
   },
